More button alignment fixes - fixed so that container has same width as height as card since they would otherwise re-size differently than the imgs

--- a/arboretum/static/css/cards.css
+++ b/arboretum/static/css/cards.css
@@ -62,15 +62,15 @@ body {
 
 .overlay-button-container {
     position: relative;
-    width:100%;
-    max-width:120px;
+    height:8em;
+    width:5.4em;
 }
 
 .overlay-button-container:before {
   content:"";
   position:absolute;
-  width:90%;
-  height:80%;
+  width:100%;
+  height:100%;
   top:0;left:0;right:0;
   background-color:rgba(0,0,0,0);
 }
@@ -86,7 +86,7 @@ body {
 .overlay-button-container input {
   position: absolute;
   top: 85%;
-  left: 45%;
+  left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   opacity:0.6;
